MODBULKOPS-299 Fixed tests